fix(styling): improve button & text colors for Dark Mode

--- a/packages/common/src/styles/_variables-theme-salesforce.scss
+++ b/packages/common/src/styles/_variables-theme-salesforce.scss
@@ -194,6 +194,7 @@ $slick-pagination-page-input-border-radius:                   3px !default;
 .slick-dark-mode {
   --ms-checkbox-color:                      #3a9ef5;
   --ms-ok-button-text-color:                #3a9ef5;
+  --slick-button-primary-bg-color:          #0057ac;
   --slick-multiselect-icon-checked-color:   #3a9ef5;
   --slick-base-dark-menu-bg-color:          #212121;
   --slick-cell-box-shadow: 0px 1px 0px      #303030, 0px -1px 0px #303030;
